--- a/index.html
+++ b/index.html
@@ -26,10 +26,13 @@
                 <a href="#" class="lista-menu-link">infraestrutura</a>
             </li>
             <li class="lista-menu-item">
-                <a href="#" class="lista-menu-link"></a>
+                <a href="#" class="lista-menu-link">Business</a>
+            </li>
+            <li class="lista-menu-item">
+                <a href="#" class="lista-menu-link">Desing & ux</a>
             </li>
         </ul>
-            <img src="img/Logo.png" alt="Logo da AluraBooks">
+            <img src="img/Logo.png" alt="Logo da AluraBooks" class="conteiner-imagem">
         </div>
         <div class="container">
              <a href="#"><img src="img/Favoritos.svg" alt="Meus Favoritos" class="container-imagem"></a>
